fixed padding on smaller screens and enabled expand class on same screens also moved email me box to be under email icon . Contact box was replaced by this

--- a/css/style.css
+++ b/css/style.css
@@ -232,7 +232,6 @@ footer {
 @media screen and (max-width: 480px){
   .grid {
     margin: 0 auto;
-    width: 100% !important;
     margin-top: 0 !important;
   }
   .grid-item {
